Fixed Vercel deployment issues and added error handling

--- a/vercel.json
+++ b/vercel.json
@@ -2,9 +2,13 @@
     "version": 2,
     "name": "expense-tracker",
     "builds": [
-        { "src": "*.html", "use": "@vercel/static" }
+        { "src": "*.html", "use": "@vercel/static" },
+        { "src": "*.css", "use": "@vercel/static" },
+        { "src": "*.js", "use": "@vercel/static" }
     ],
     "routes": [
-        { "src": "/(.*)", "dest": "/$1" }
+        { "handle": "filesystem" },
+        { "src": "/", "dest": "/index.html" },
+        { "src": "/(.+)", "dest": "/$1" }
     ]
 }
